objects/Eggplant_Integration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings supporting the Eggplant DAI REST API integration</description>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for connecting to the Eggplant DAI REST API</description>
        <inlineHelpText>Password for connecting to the Eggplant DAI REST API</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server__c</fullName>
        <description>The URL of the DAI REST API server.  Be sure to include the &quot;https://&quot; or &quot;callout:&quot; as appropriate.</description>
        <inlineHelpText>The URL of the DAI REST API server.  Be sure to include the &quot;https://&quot; or &quot;callout:&quot; as appropriate.</inlineHelpText>
        <label>Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username for connecting to Eggplant DAI REST API</description>
        <inlineHelpText>Username for connecting to Eggplant DAI REST API</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Eggplant Integration</label>
</CustomObject>